# max6625-station

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  calibration.json  config.toml  cross.sh  docker_image_build.sh  run.sh
.cargo/: config.toml
python/: MAX6675.py  main.py
resources/: max6675-case.stl
src/: args.rs  config.rs  ds18b20.rs  kalman.rs  main.rs  max6675.rs  metric.rs  netio.rs  ring_buffer.rs  scope.rs  spi.rs
